// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registry Breadcrumb when is not rootRoute renders 1`] = `
<nav
  aria-label="Breadcrumb"
  class="gl-breadcrumbs"
>
   
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
    <li
      class="gl-breadcrumb-item"
    >
      <a
        class=""
        target="_self"
      >
        <span>
          
        </span>
         
        <span
          class="gl-breadcrumb-separator"
          data-testid="separator"
        >
          <span
            class="gl-mx-n5"
          >
            <svg
              aria-hidden="true"
              class="gl-icon s8"
              data-testid="chevron-lg-right-icon"
              role="img"
            >
              <use
                href="#chevron-lg-right"
              />
            </svg>
          </span>
        </span>
      </a>
    </li>
     
    <!---->
    <li
      class="gl-breadcrumb-item"
    >
      <a
        aria-current="page"
        class=""
        href="#"
        target="_self"
      >
        <span>
          
        </span>
         
        <!---->
      </a>
    </li>
     
    <!---->
  </ol>
</nav>
`;

exports[`Registry Breadcrumb when is rootRoute renders 1`] = `
<nav
  aria-label="Breadcrumb"
  class="gl-breadcrumbs"
>
   
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
    <li
      class="gl-breadcrumb-item"
    >
      <a
        aria-current="page"
        class=""
        target="_self"
      >
        <span>
          
        </span>
         
        <!---->
      </a>
    </li>
     
    <!---->
  </ol>
</nav>
`;
